applications/opengauss-website/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: opengauss-website
  name: opengauss-website
