applications/opengauss-website/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: newyear-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8002
---
kind: Endpoints
apiVersion: v1
metadata:
  name: newyear-frontend
subsets:
  - addresses:
      - ip: 159.138.45.71
    ports:
      - port: 8002
---
kind: Service
apiVersion: v1
metadata:
  name: newyear-backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8081
---
kind: Endpoints
apiVersion: v1
metadata:
  name: newyear-backend
subsets:
  - addresses:
      - ip: 159.138.45.71
    ports:
      - port: 8081
