applications/opengauss-website/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/limit-connections: "2000"
    nginx.ingress.kubernetes.io/limit-rps: "2000"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-XSS-Protection "1; mode=block";
      add_header Strict-Transport-Security "max-age=31536000";
      add_header X-Frame-Options "ALLOW-FROM https://vhall.huawei.com";
      add_header X-Cache-Status $upstream_cache_status;
      add_header Content-Security-Policy "script-src 'self' *.baidu.com ers.baidu.com 'unsafe-eval' 'unsafe-inline';object-src 'none';frame-ancestors 'https://vhall.huawei.com'";
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/server-snippet: |
      proxy_cache statics_cache;
      proxy_cache_lock on;
      proxy_cache_key $server_name$uri$is_args$args;
      proxy_ignore_headers Cache-Control;
      proxy_ignore_headers Set-Cookie;
      proxy_cache_valid 60m;
      location ~ /purge(/.*) {
          proxy_cache_purge  statics_cache $server_name$1$is_args$args;
      }
      proxy_cache_bypass $nocache;
      proxy_no_cache $nocache;
  name: website-v2-ingress-main
spec:
  tls:
    - hosts:
        - events.opengauss.org
      secretName: opengauss-tls
  rules:
    - host: events.opengauss.org
      http:
        paths:
          - backend:
              serviceName: newyear-backend
              servicePort: 80
            path: /blessapi
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/auth-response-headers: "X-Auth-Request-User, X-Auth-Request-Groups, X-Auth-Request-Email, X-Auth-Request-Preferred-Username"
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: website-ingress-protected
spec:
  tls:
    - hosts:
        - events.opengauss.org
      secretName: opengauss-tls
  rules:
    - host: events.opengauss.org
      http:
        paths:
          - backend:
              serviceName: newyear-frontend
              servicePort: 80
            path: /2020summary(/|$)(.*)
